# cxxmpi

./: .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/cxxmpi/: cart_comm.hpp  comm.hpp  cxxmpi.hpp  dims.hpp  dtype.hpp  error.hpp  file.hpp  request.hpp  status.hpp  universe.hpp
test/: CMakeLists.txt
test/source/: basic_mpitest.cpp  cart_comm_mpitest.cpp  comm_mpitest.cpp  cxxmpi_mpitest_main.cpp  cxxmpi_test.cpp  cxxmpi_test_main.cpp  dims_mpitest.cpp  dtype_mpitest.cpp  error_mpitest.cpp
